--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="postgresql://postgres:alpha66r@localhost:5432/DB_COLUNA_RETA"
+DATABASE_URL="postgresql://postgres:admin@localhost:5432/DB_COLUNA_RETA"
